--- a/extern/configure.in
+++ b/extern/configure.in
@@ -1,4 +1,4 @@
-AC_REVISION("$Id: configure.in,v 1.20 1998/04/11 13:56:33 grubba Exp $")
+AC_REVISION("$Id: configure.in,v 1.21 1998/05/19 10:45:17 grubba Exp $")
 AC_INIT(cgi.c)
 AC_CONFIG_HEADER(config.h)
 
@@ -98,7 +98,9 @@ else
   AC_MSG_RESULT(no)
 fi
 
-AC_HAVE_FUNCS(memmove setrlimit pipe socketpair poll shutdown bcopy memcpy realloc mlockall wait3 wait4 waitpid plock memset nice seteuid setresuid)
+AC_HAVE_FUNCS(memmove setrlimit pipe socketpair poll shutdown bcopy memcpy \
+              realloc mlockall wait3 wait4 waitpid plock memset nice seteuid \
+              setresuid perror)
 
 AC_C_CONST
 AC_TYPE_SIZE_T
