--- a/extern/Makefile.in
+++ b/extern/Makefile.in
@@ -61,10 +61,14 @@ check: verify
 
 verify: verbose_verify
 
+# NOTE: No /. in the directory test below!
 verbose_verify: cgi
 	@test -d cgi.testsuite || mkdir cgi.testsuite
 	@if test "x$UID" = "x0"; then \
-	  echo Running as root. Attempting to run as nobody...; \
+	  echo Running as root. Will attempt to run as nobody instead; \
+	  echo Chowning directory cgi.testsuite to nobody...; \
+	  chown nobody cgi.testsuite; \
+	  echo Attempting to run as nobody...; \
 	  su nobody $(MAKE) verbose_verify || exit 1; \
 	else for t in `cd $(SRCDIR)/cgi.testsuite; find . -name '*.in' -print`; \
 	  do \
