--- a/extern/Makefile.in
+++ b/extern/Makefile.in
@@ -70,7 +70,8 @@ verbose_verify: cgi
 	  chown nobody cgi.testsuite; \
 	  echo Attempting to run as nobody...; \
 	  su nobody $(MAKE) verbose_verify || exit 1; \
-	else for t in `cd $(SRCDIR)/cgi.testsuite; find . -name '*.in' -print`; \
+	else \
+	  for t in `cd $(SRCDIR)/cgi.testsuite; find . -name '*.in' -print`; \
 	  do \
 	    base="`echo $$t|sed -e 's/\.in$$//'`"; \
 	    echo CGI Test: $$base; \
