--- a/Makefile.in
+++ b/Makefile.in
@@ -260,8 +260,28 @@ bump_version: bump_version.stamp
 	  echo Updating sources...; \
 	  if cvs -q update -dA|egrep '^[CM?]'; then exit 1; else : ; fi; \
 	)
+	@for d in $(SRCDIR)/pike/0.5 $(SRCDIR)/pike/0.6; do \
+	  if test -f $$d/src/version.c; then \
+	    (cd $$d/; \
+	      echo Bumping Pike version in directory $$d...; \
+	      build=`sed <src/version.c -e'/push_text/s/.* \([0-9]*\).*/\1/p' -ed|head -1`; \
+	      newbuild=`echo $$build 1+p|dc`; \
+	      sed <src/version.c -e"/push_text/s/ $$build/ $$newbuild/" >src/version.c.new; \
+	      checkbuild=`sed <src/version.c.new -e'/push_text/s/.* \([0-9]*\).*/\1/p' -ed|head -1`; \
+	      if test "x$$newbuild" = "x$$checkbuild"; then \
+		mv -f src/version.c.new src/version.c || exit 1; \
+		echo "Successfull bump to build $$newbuild."; \
+	      else \
+		echo "Version bump failed: $$newbuild != $$checkbuild."; \
+		exit 1; \
+	      fi; \
+	      cvs ci -m "Pike release bumped to $$newbuild by bump_version." src/version.c || exit 1; \
+	      cvs tag `sed -e '/push_text/s/.*"\(.*\)".*/\1/p' -ed|tr 'A-Z. ' 'a-z__'|head -1`||exit 1; \
+	      echo Done with $$d.); \
+	  else :; fi; \
+	done
 	@(cd $(SRCDIR)/server/base_server; \
-	  echo Bumping version...; \
+	  echo Bumping Roxen version...; \
 	  build=`sed <roxen.pike -e'/__roxen_build__/s/[^0-9]*//gp' -ed|head -1`; \
 	  newbuild=`echo $$build 1+p|dc`; \
 	  sed <roxen.pike -e"/__roxen_build__/s/$$build/$$newbuild/" >roxen.pike.new; \
