--- a/Makefile.in
+++ b/Makefile.in
@@ -328,8 +328,7 @@ dist: $(SRCDIR)/ChangeLog.gz $(SRCDIR)/ChangeLog.rxml.gz
 	  echo $$f; rm $$f || exit 1; \
 	done; \
 	for d in $$version/pike/0.5/tutorial $$version/pike/0.5/about_pike \
-	  $$version/pike/0.5/doc $$version/pike/0.6/about_pike \
-	  $$version/pike/0.6/doc; do \
+	  $$version/pike/0.6/about_pike $$version/pike/0.6/doc; do \
 	  if test -d $$d/. ; then \
 	    echo Removing $$d...; rm -rf $$d || exit 1; \
 	  else :; fi; \
