--- a/extern/fast_cgi/configure.in
+++ b/extern/fast_cgi/configure.in
@@ -1,4 +1,4 @@
-dnl     $Id: configure.in,v 1.6 1997/11/07 00:09:25 grubba Exp $
+dnl     $Id: configure.in,v 1.7 1998/06/18 00:47:59 grubba Exp $
 dnl
 dnl     This file is an input file used by the GNU "autoconf" program to
 dnl     generate the file "configure", which is run during the build
@@ -26,6 +26,7 @@ AC_CHECK_HEADERS(arpa/inet.h strings.h)
 #--------------------------------------------------------------------
 #  What extra libraries do we need for this platform?
 #--------------------------------------------------------------------
+AC_CHECK_LIB(m, floor, [LIBS="$LIBS -lm"])
 AC_CHECK_LIB(bind, __inet_ntoa, [LIBS="$LIBS -lbind"])
 AC_CHECK_LIB(socket, main, [LIBS="$LIBS -lsocket"])
 AC_CHECK_LIB(nsl, main, [LIBS="$LIBS -lnsl"])
