--- a/extern/fast_cgi/cgi-fcgi/Makefile.in
+++ b/extern/fast_cgi/cgi-fcgi/Makefile.in
@@ -3,7 +3,7 @@
 #
 #  Open Market, Inc.
 #
-#  $Id: Makefile.in,v 1.2 1997/10/05 03:33:09 grubba Exp $
+#  $Id: Makefile.in,v 1.3 1998/06/18 00:48:17 grubba Exp $
 #
 
 SRCDIR=@srcdir@
@@ -15,7 +15,7 @@ CC	= @CC@
 CC_PURE	= @CC_PURE@
 INCLUDEDIR  = $(SRCDIR)/../include -I../include -I. -I..
 CFLAGS	= @CFLAGS@ @CCDEFS@ @PROFILE@ -I$(INCLUDEDIR)
-LIBS	= @LIBS@ -lm
+LIBS	= @LIBS@
 RANLIB	= @RANLIB@
 
 OBJS	    = fcgiapp.o
