--- a/.gitattributes
+++ b/.gitattributes
@@ -50,6 +50,7 @@ urw_itc_avant_garde-demi-r binary
 /extern/fast_cgi/libfcgi/strerror.c foreign_ident
 /extern/run_verify foreign_ident
 /mkdir foreign_ident
+/pike-roxen.in foreign_ident
 /rxml_packages/gtext_headers foreign_ident
 /server/base_server/cache.pike foreign_ident
 /server/base_server/color.pike foreign_ident
