--- a/.gitattributes
+++ b/.gitattributes
@@ -7,5 +7,6 @@
 # Files containing CVS ids follow.
 # Remove the corresponding line before committing
 # changes to these files.
+/doc/db.spec foreign_ident
 /modules/admin/admin.pike foreign_ident
 /modules/protocols/smtp.pike foreign_ident
