--- a/.gitattributes
+++ b/.gitattributes
@@ -210,6 +210,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/proxies/wais.pike foreign_ident
 /server/modules/scripting/cgi.pike foreign_ident
 /server/modules/scripting/fcgi.pike foreign_ident
+/server/modules/scripting/fpscript.pike foreign_ident
 /server/modules/scripting/newpikescript.pike foreign_ident
 /server/modules/scripting/pikescript.pike foreign_ident
 /server/modules/tags/check_spelling.pike foreign_ident
