--- a/.gitattributes
+++ b/.gitattributes
@@ -10,4 +10,5 @@
 /doc/db.spec foreign_ident
 /modules/admin/actions/20:Add_customer/wizards/edit.pike foreign_ident
 /modules/admin/admin.pike foreign_ident
+/modules/autoweb/autositefs.pike foreign_ident
 /modules/protocols/smtp.pike foreign_ident
