--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 [attr]binary -text -crlf -diff -ident
 * text ident
+*.gif binary
 /sites/1/index.html eol=crlf
 
 # Handling of foreign (ie CVS) identifiers.
