--- a/extern/Makefile.in
+++ b/extern/Makefile.in
@@ -120,7 +120,7 @@ clean:
 	@(cd fast_cgi; $(MAKE) clean "CFLAGSUP=$(CFLAGS)" "LDFLAGS=$(LDFLAGS)" "CC=$(CC)")
 
 spotless: clean
-	@rm -f config.h config.log config.status  stamp-h
+	@rm -f config.* stamp-h
 
 distribute: spotless
 	@rm -f Makefile
@@ -135,6 +135,10 @@ stamp-h: $(SRCDIR)/config.h.in config.status
 	CONFIG_FILES="" CONFIG_HEADERS=config.h ./config.status
 
 $(SRCDIR)/config.h.in : $(SRCDIR)/stamp-h.in
+	@if test -f "$(SRCDIR)/config.h.in"; then :; else \
+	  rm "$(SRCDIR)/stamp-h.in"; \
+	  $(MAKE) "$(SRCDIR)/stamp-h.in"; \
+	fi
 
 $(SRCDIR)/stamp-h.in : $(SRCDIR)/configure.in $(SRCDIR)/acconfig.h
 	cd $(SRCDIR) && autoheader
