--- a/.gitattributes
+++ b/.gitattributes
@@ -229,6 +229,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/tags/sqltag.pike foreign_ident
 /server/modules/tags/tablify.pike foreign_ident
 /server/modules/tags/wizard_tag.pike foreign_ident
+/server/modules/tags/ximg.pike foreign_ident
 /server/more_modules/bofh.pike foreign_ident
 /server/more_modules/clock.pike foreign_ident
 /server/more_modules/configure.pike foreign_ident
