--- a/.gitattributes
+++ b/.gitattributes
@@ -18,4 +18,5 @@
 /modules/dns/AutoDNS.pike foreign_ident
 /modules/mail/AutoMailAPI.pike foreign_ident
 /modules/mail/MailReader.pike foreign_ident
+/modules/mail/clientlayer.pike foreign_ident
 /modules/protocols/smtp.pike foreign_ident
