--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@
 /doc/db.spec foreign_ident
 /modules/admin/actions/20:Add_customer/wizards/edit.pike foreign_ident
 /modules/admin/admin.pike foreign_ident
+/modules/autoreg/autoreg.pike foreign_ident
 /modules/autoweb/autositefs.pike foreign_ident
 /modules/autoweb/webadm.pike foreign_ident
 /modules/dns/AutoDNS.pike foreign_ident
