Added some new images
Rev: templates/img/dawn/blue_clouds.jpg:1.1
Rev: templates/img/dawn/blue_clouds_fix.jpg:1.1
Rev: templates/img/night/galler.ppm:1.1
Rev: templates/img/night/galler_fade.ppm:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,9 @@
 * text ident
 *.gif binary
 /sites/1/index.html eol=crlf
+*.jpg binary
 *.pnm binary
+*.ppm binary
 
 # Handling of foreign (ie CVS) identifiers.
 #
