--- a/.gitattributes
+++ b/.gitattributes
@@ -22,5 +22,6 @@
 /modules/mail/AutoMailAPI.pike foreign_ident
 /modules/mail/MailReader.pike foreign_ident
 /modules/mail/clientlayer.pike foreign_ident
+/modules/mail/mailadmin.pike foreign_ident
 /modules/mail/mailtags.pike foreign_ident
 /modules/protocols/smtp.pike foreign_ident
