No longer uses the run_verify script.
Rev: extern/Makefile.in:1.31

--- a/extern/Makefile.in
+++ b/extern/Makefile.in
@@ -68,9 +68,9 @@ verbose_verify: cgi
 	  echo Running as root. Will attempt to run as nobody instead; \
 	  echo Chowning directory cgi.testsuite to nobody...; \
 	  chown -R nobody cgi.testsuite; \
+	  chmod u+rw cgi.testsuite; \
 	  echo Attempting to run as nobody...; \
-	  KLUGE_MAKE="$(MAKE)"; export KLUGE_MAKE; \
-	  su nobody -c $(SRCDIR)/run_verify || exit 1; \
+	  su nobody -c '$(MAKE) verbose_verify' || exit 1; \
 	else \
 	  for t in `cd $(SRCDIR)/cgi.testsuite; find . -name '*.in' -print`; \
 	  do \
