--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@
 /modules/dns/AutoDNS.pike foreign_ident
 /modules/mail/AutoMailAPI.pike foreign_ident
 /modules/mail/MailReader.pike foreign_ident
+/modules/mail/automailrcpt.pike foreign_ident
 /modules/mail/clientlayer.pike foreign_ident
 /modules/mail/mailadmin.pike foreign_ident
 /modules/mail/mailtags.pike foreign_ident
