*** empty log message ***
Rev: modules/protocols/imap.pike:1.1
Rev: pike-modules/IMAP.pmod/dummy_server.pike:1.3

--- a/.gitattributes
+++ b/.gitattributes
@@ -28,4 +28,5 @@
 /modules/mail/mailtags.pike foreign_ident
 /modules/mail/smtprelay.pike foreign_ident
 /modules/mail/testrcpt.pike foreign_ident
+/modules/protocols/imap.pike foreign_ident
 /modules/protocols/smtp.pike foreign_ident
