--- a/.gitattributes
+++ b/.gitattributes
@@ -29,6 +29,7 @@
 /modules/mail/filters/verify_addr.pike foreign_ident
 /modules/mail/mailadmin.pike foreign_ident
 /modules/mail/mailtags.pike foreign_ident
+/modules/mail/pop3.pike foreign_ident
 /modules/mail/smtprelay.pike foreign_ident
 /modules/mail/testrcpt.pike foreign_ident
 /modules/protocols/imap.pike foreign_ident
